--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,8 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
         }
+         maven { url 'https://maven.google.com' }
+          maven { url "https://www.jitpack.io" }
         maven {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
@@ -36,6 +38,12 @@ allprojects {
                 excludeGroup "com.facebook.react"
             }
         }
+
+       maven {
+           // react-native-background-fetch
+           url("${project(':react-native-background-fetch').projectDir}/libs")
+      }
+
         google()
         maven { url 'https://www.jitpack.io' }
     }
