--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,10 @@ target 'MyApp' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-background-actions', :path => '../node_modules/react-native-background-actions'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'MyAppTests' do
     inherit! :complete
     # Pods for testing
